--- a/profapp/static/front/bootstrap/css/style.css
+++ b/profapp/static/front/bootstrap/css/style.css
@@ -30,6 +30,60 @@ body {
     text-align: center;
 }
 
+.mr05em {
+    margin-right: 0.5em;
+}
+
+/*dialog*/
+
+#messageModal textarea {
+    width: 100%;
+    height: 8em;
+}
+
+
+/*tables*/
+table.t200logo {
+    width: 100%;
+    vertical-align: top;
+}
+
+table.t200logo tr td:first-child {
+    width: 200px;
+}
+
+table.t200logo tr td:last-child {
+    width: 100%;
+}
+
+table.t200logo tr td {
+    padding: 5px;
+    vertical-align: top;
+}
+
+table.tablelist {
+    width: 100%;
+    vertical-align: top;
+}
+
+table.tablelist tr td:first-child {
+    width: 10px;
+    text-align: right;
+    font-style: italic;
+    white-space: nowrap;
+}
+
+table.tablelist tr td:last-child {
+    width: 100%;
+    text-align: left;
+}
+
+table.tablelist tr td {
+    padding: 2px;
+    vertical-align: top;
+}
+
+
 /*images*/
 .portal-logo {
     height: 50px;
@@ -145,6 +199,14 @@ body.no-search .center-content {
     color: white;
 }
 
+.tags-at-right {
+    position: absolute;
+    text-align: right;
+    right: 5px;
+    top: 0px;
+    width: 30%;
+}
+
 /*article*/
 .article {
     border-bottom: solid #AAEEEE thin;
@@ -164,14 +226,6 @@ body.no-search .center-content {
 
 .article-division {
     margin-right: 70%;
-}
-
-.article-tags {
-    position: absolute;
-    text-align: right;
-    right: 5px;
-    top: 0px;
-    width: 30%;
 }
 
 .article-company-and-date {
@@ -236,3 +290,23 @@ body.no-search .center-content {
         max-height: 480px;
     }
 }
+
+/*company catalog*/
+.member {
+    border-bottom: solid #EEAAEE thin;
+    border-top: solid #EEAAEE thin;
+    background-color: #fffaff;
+    margin-bottom: 5px;
+    padding: 0px 5px;
+}
+
+.member img {
+    max-width: 200px;
+}
+
+/*company pages*/
+.company-contact-item {
+    width: 300px;
+    float: left;
+}
+
