--- a/profapp/templates/front/bootstrap/_common/block_head.html
+++ b/profapp/templates/front/bootstrap/_common/block_head.html
@@ -11,23 +11,22 @@
 <link rel="icon" href="{{ fileUrl(portal.favicon_file_id, if_no_file=static_address('favicon.ico')) }}"
       type="image/gif"/>
 
-<link rel="stylesheet" href="{{ static_address('jquery/smoothness/jquery-ui.css') }}">
 
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+
+
+{#<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"   integrity="sha256-oTyWrNiP6Qftu4vs2g0RPCKr3g1a6QTlITNgoebxRc4="   crossorigin="anonymous"></script>#}
+{#<link href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css" rel="stylesheet">#}
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-<link href="{{ static_address('front/' + portal.layout.name + '/css/style.css') }}" rel="stylesheet">
-<link href="{{ static_address('css/article.css') }}" rel="stylesheet">
-<link href="{{ static_address('front/' + portal.layout.name + '/css/article.css') }}" rel="stylesheet">
+
+
+
 
 <link href="{{ static_address('front/css/font-awesome.css') }}" rel="stylesheet">
-
-{{ config_variables()|safe }}
-
-<script src="{{ static_address('jquery/jquery.min.js') }}"></script>
-<script src="{{ static_address('jquery/jquery-ui.min.js') }}"></script>
-
-{#<script src="{{ static_address('js/profireader.js') }}"></script>#}
-<script src="{{ static_address('front/' + portal.layout.name + '/js/script.js') }}"></script>
 
 <script src="{{ static_address('new/moment/moment.min.js') }}"></script>
 {% if g.lang != 'en' -%}
@@ -36,3 +35,13 @@
 
 
 
+<link href="{{ static_address('front/' + portal.layout.name + '/css/style.css') }}" rel="stylesheet">
+<link href="{{ static_address('css/article.css') }}" rel="stylesheet">
+<link href="{{ static_address('front/' + portal.layout.name + '/css/article.css') }}" rel="stylesheet">
+
+
+{#<script src="{{ static_address('js/profireader.js') }}"></script>#}
+<script src="{{ static_address('front/' + portal.layout.name + '/js/script.js') }}"></script>
+
+
+{{ config_variables()|safe }}
