--- a/profapp/templates/front/bootstrap/company_address.html
+++ b/profapp/templates/front/bootstrap/company_address.html
@@ -2,7 +2,7 @@
 
 {% block head %}
     {{ super() }}
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{ secret_data.GOOGLE_MAP_KEY }}"></script>
     <style>
         #map {
             width: 100%;
@@ -32,7 +32,7 @@
 
 {% block company_content %}
 
-    <table>
+    <table class="tablelist">
         {% if member_company['country'] %}
             <tr>
                 <td>{{ _('Company country') }}</td>
@@ -64,10 +64,7 @@
                 <td>{{ member_company['email'] }}</td>
             </tr>{% endif %}
     </table>
-
     <br/>
-
     <div id="map"></div>
-
 
 {% endblock %}
