--- a/profapp/templates/front/bootstrap/layout_company_page.html
+++ b/profapp/templates/front/bootstrap/layout_company_page.html
@@ -1,11 +1,12 @@
 {% extends 'layout.html' %}
+{% block body_class %}no-search{% endblock %}
 {% block title -%}
     {{ _('title ' + company_menu_selected_item + ' %(company_name)s - %(portal_name)s', {'company_name': member_company.name, 'portal_name': portal.name}) }}
 {%- endblock %}
 
-{% block top_content %}
-    {{ super() }}
+
+{% block center_content %}
     {% include 'company_menu.html' %}
-    <div>{{ _('header ' + company_menu_selected_item + ' %(company_name)s', {'company_name': member_company.name}) }}</div>
+    <h3>{{ _('header ' + company_menu_selected_item + ' %(company_name)s', {'company_name': member_company.name}) }}</h3>
     {% block company_content %}{% endblock %}
 {% endblock %}
