--- a/profapp/templates/front/bootstrap/article_short.html
+++ b/profapp/templates/front/bootstrap/article_short.html
@@ -24,13 +24,7 @@
             <i class="fa fa-building-o"></i> <a href="{{ url_for('front.company_page', member_company_name = article['company']['name'], member_company_id = article['company']['id']) }}">{{ article['company']['name']|safe }}</a>
         </div>
         <div class="article-date nw">
-            <i class="fa fa-calendar"></i>
-            {% if article.division.portal_division_type_id == 'events' %}
-                {{ moment(article.event_begin_tm, 'MM.DD.YYYY') }} -
-                {{ moment(article.event_end_tm, 'MM.DD.YYYY') }}
-            {% else %}
-                {{ moment(article.publishing_tm) }}
-            {% endif %}
+            {{ frontmacros.date(article.division.portal_division_type_id, article) }}
         </div>
     </div>
 
