--- a/profapp/templates/front/bootstrap/_common/macros.html
+++ b/profapp/templates/front/bootstrap/_common/macros.html
@@ -8,3 +8,21 @@
     {%- endif %}
     </span>
 {% endmacro %}
+
+{% macro date(division_type, article) %}
+    {% if division_type == 'events' %}
+        {% if article.event_begin_tm and article.event_begin_tm %}
+            <i class="fa fa-calendar"></i>
+            {{ moment(article.event_begin_tm, 'MM.DD.YYYY') }} - {{ moment(article.event_end_tm, 'MM.DD.YYYY') }}
+        {% elif article.event_begin_tm %}
+            <i class="fa fa-calendar"></i>
+            {{ moment(article.event_begin_tm) }}
+        {% elif article.event_end_tm %}
+            <i class="fa fa-calendar"></i>
+            {{ moment(article.event_end_tm) }}
+        {% endif %}
+    {% elif article.publishing_tm %}
+        <i class="fa fa-calendar"></i>
+        {{ moment(article.publishing_tm) }}
+    {% endif %}
+{% endmacro %}
