--- a/profapp/templates/front/raw/article_short.html
+++ b/profapp/templates/front/raw/article_short.html
@@ -11,7 +11,7 @@
     </div>
     <div>{{ article.subtitle }}</div>
     <div>
-        <img class="{{ classes.image.illustration }}" {{ prImageUrl(article['illustration']['url']) }}/>
+        <img class="article-illustration" {{ prImageUrl(article['illustration']['url']) }}/>
     </div>
     <div>{{ article.short|safe }}</div>
 
