--- a/profapp/templates/front/bootstrap/_common/block_user.html
+++ b/profapp/templates/front/bootstrap/_common/block_user.html
@@ -2,11 +2,11 @@
 {%- if g.user -%}
     <a role="button" aria-haspopup="true" id="profireader_user_link"
        href="{% if g.user %}//{{ MAIN_DOMAIN }}/user/profile/{{ g.user.id }}{% else %}{{ url_join }}{% endif %}"><img {{ prImageUrl(g.user.avatar.url) }}
-            class="{{ classes.image.user }}"/></a>
+            class="user-avatar"/></a>
 {%- else -%}
     <a id="profireader_link" target="profireader_subscribe"
        href="{% if g.user %}//{{ MAIN_DOMAIN }}/{% else %}{{ url_join }}{% endif %}"><img
-            class="{{ classes.image.profireader }}" src="{{ static_address('favicon.ico') }}"/></a>
+            class="profireader-logo" src="{{ static_address('favicon.ico') }}"/></a>
 {%- endif -%}
 
 
