--- a/profapp/templates/front/bootstrap/_common/macros.html
+++ b/profapp/templates/front/bootstrap/_common/macros.html
@@ -1,8 +1,8 @@
 {% macro tag(tag, url_toggle_tag = None, selected_tag_names = [], toogle_tag = False, endpoint = None) %}
-    <span class="{{ classes.tag.default }} {{ classes.tag.selected if tag.text in selected_tag_names else classes.tag.unselected }}">
+    <span class="label {{ 'label-danger' if tag.text in selected_tag_names else 'label-default' }}">
     {% if toogle_tag and url_toggle_tag -%}
         <a class="fa {{ 'fa-minus' if tag.text in selected_tag_names else 'fa-plus' }}"
-           href="{{ url_toggle_tag(toggle_tag = tag.text) }}"> {{ tag.text }}</a>
+           href="{{ url_toggle_tag(toggle_tag = tag.text) }}">{{ tag.text }}</a>
     {%- else -%}
         {{ tag.text }}
     {%- endif %}
