--- a/profapp/templates/front/bootstrap/layout.html
+++ b/profapp/templates/front/bootstrap/layout.html
@@ -1,28 +1,19 @@
 {% extends '_common/html.html' %}
 {% block body %}
-    {% set _ = classes.update({'tag': {'default': 'label', 'selected': 'label-danger', 'unselected': 'label-default'}}) %}
-    {% set _ = classes.update({'menu': {'default': '', 'selected': 'active'}}) %}
-    {% set _ = classes.update({'pager': {'default': '', 'selected': 'active'}}) %}
-    {% set _ = classes.update({'image': {'portal': 'portal-logo', 'company': 'company-logo', 'profireader': 'profireader-logo', 'user': 'user-avatar', 'illustration': 'article-illustration'}}) %}
-    {% set _ = classes.update({'disabled': 'disabled', 'hidden': 'dn', 'link': 'link'}) %}
-    {% set _ = classes.update({'banner': {'in_article': 'wide-banner', 'vertical': 'vertical-banner', 'bottom': 'bottom-banner'}}) %}
-    {% set _ = classes.update({'block': {'top': 'top-content', 'bottom': 'bottom-content container', 'middle': 'pr container',
-    'left': 'pa left-content', 'center': 'pa center-content', 'right': 'pa right-content'}}) %}
-
     {% block top_content %}{% include '_common/block_menu.html' %}{% endblock %}
 
-    <div class="{{ classes.block.middle }}">
+    <div class="pr container">
             {% block middle_content %}
-                <div class="{{ classes.block.center }}">
+                <div class="pa center-content">
                     {% block center_content %}{% endblock %}
                 </div>
-                <div class="{{ classes.block.left }}">
+                <div class="pa left-content">
                     {% block left_content %}{% include '_common/block_search.html' %}{% endblock %}
                 </div>
-                <div class="{{ classes.block.right }}">
+                <div class="pa right-content">
                     {% block right_content %}
-                        <a href="#" class="{{ classes.banner.vertical }}">{{ portal.advs.right_banner_1|safe }}</a>
-                        <a href="#" class="{{ classes.banner.vertical }}">{{ portal.advs.right_banner_2|safe }}</a>
+                        <a href="#" class="vertical-banner">{{ portal.advs.right_banner_1|safe }}</a>
+                        <a href="#" class="vertical-banner">{{ portal.advs.right_banner_2|safe }}</a>
                     {% endblock %}
                 </div>
 
@@ -31,10 +22,10 @@
         </div>
     </div>
 
-    <div class="{{ classes.block.bottom }}">
+    <div class="bottom-content container">
         {% block bottom_content %}
             <div class="container">
-                <a href="#" class="{{ classes.banner.bottom }}">{{ portal.advs['bottom_banner']|safe }}</a>
+                <a href="#" class="bottom-banner">{{ portal.advs['bottom_banner']|safe }}</a>
             </div>
         {% endblock %}
 
