--- a/profapp/static/front/bootstrap/css/style.css
+++ b/profapp/static/front/bootstrap/css/style.css
@@ -34,6 +34,10 @@ body {
     margin-right: 0.5em;
 }
 
+.plr0 {
+    padding-left: 0px;
+    padding-right: 0px;
+}
 
 /*dialog*/
 
@@ -322,3 +326,4 @@ body.no-search .center-content {
     margin-top: 5px;
     float: right;
 }
+
