--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -195,11 +195,14 @@ body {
 
 .dropdown-content {
   display: none;
-  margin-left: 120px;
   position: absolute;
+  top: 25px;
+  left: -50px;
+  margin: 6px 0px 0px 0px;
   background-color: @color-bg;
-  min-width: 160px;
+  min-width: 130px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
 .dropdown-content a {
@@ -965,7 +968,6 @@ body {
   .line-user-info {
     color: #000;
     border-bottom: 1px solid #ECF0F1;
-    word-wrap: break-word;
   }
   span {
     word-wrap: break-word;
