--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -162,7 +162,9 @@ body {
 }
 .dropdown-content {
   display: none;
-  position: absolute;top: 25px; left: -50px;
+  position: absolute;
+  top: 25px;
+  left: -50px;
   margin: 6px 0px 0px 0px;
   background-color: #212121;
   min-width: 130px;
@@ -174,13 +176,11 @@ body {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-
 }
 .dropdown-content a:hover {
   background-color: #00BBA1;
   transition: all 0.2s ease-out;
 }
-
 .dropdown:hover .dropdown-content {
   display: block;
   transition: all 0.2s ease-out;
@@ -825,7 +825,6 @@ body {
 .profile-window .line-user-info {
   color: #000;
   border-bottom: 1px solid #ECF0F1;
-  word-wrap: break-word;
 }
 .profile-window span {
   word-wrap: break-word;
