--- a/profapp/templates/front/bootstrap/_common/block_user.html
+++ b/profapp/templates/front/bootstrap/_common/block_user.html
@@ -1,7 +1,7 @@
 {% set url_join = '//' + MAIN_DOMAIN + '/auth/login_signup/?login_signup=signup&portal_id=' + portal.id %}
 {%- if g.user -%}
     <a role="button" aria-haspopup="true" id="profireader_user_link"
-       href="{% if g.user %}//{{ MAIN_DOMAIN }}/user/profile/{{ g.user.id }}{% else %}{{ url_join }}{% endif %}"><img {{ prImageUrl(g.user.avatar.url) }}
+       href="{% if g.user %}//{{ MAIN_DOMAIN }}/users/profile/{{ g.user.id }}{% else %}{{ url_join }}{% endif %}"><img {{ prImageUrl(g.user.avatar.url) }}
             class="user-avatar"/></a>
 {%- else -%}
     <a id="profireader_link" target="profireader_subscribe"
