--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -76,6 +76,7 @@
             };
 
             $scope.loadNextPage('{{ url_for('company.companies_load')|safe }}', function (resp) {
+                console.log(resp['companies']);
                 $scope.data.companies = $scope.data.companies ? $scope.data.companies : [];
                 $scope.data.companies = $scope.data.companies.concat(resp['companies']);
             });
