--- a/profapp/templates/front/bootstrap/layout.html
+++ b/profapp/templates/front/bootstrap/layout.html
@@ -8,7 +8,7 @@
                     {% block center_content %}{% endblock %}
                 </div>
                 <div class="pa left-content">
-                    {% block left_content %}{% include '_common/block_search.html' %}{% endblock %}
+                    {% block left_content %}{% include '_common/block_tags.html' %}{% endblock %}
                 </div>
                 <div class="pa right-content">
                     {% block right_content %}
