--- a/profapp/templates/front/bootstrap/company_menu.html
+++ b/profapp/templates/front/bootstrap/company_menu.html
@@ -11,6 +11,15 @@
 </table>
 
 <nav class="navbar navbar-default navbar-static-top">
+    <div class="navbar-header pull-right" style="margin-left: 0px; margin-right: 0px;">
+        <button type="button" class="navbar-toggle collapsed mlr05" data-toggle="collapse" data-target="#company-navbar"
+                aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+    </div>
     <div id="company-navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li {% if company_menu_selected_item == 'about' %}class="active"{% endif %}><a
